[tool.poetry]
name = "ex-wall-frame-transmitter"
version = "0.1.0"
description = ""
authors = ["Trevor O'Leary <git@trevoroleary.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
websockets = "^12.0"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
